<resources>
    <string name="app_name">GuardianCircle</string>
    <string name="sos_button_label">SOS</string>
    <string name="sos_status_idle">Sustav aktivan</string>
    <string name="sos_status_monitoring_detail">Pratim padove, poziv i cloud alarm su spremni.</string>
    <string name="sos_status_manual">Ručni SOS aktiviran</string>
    <string name="sos_status_calling">Pozivam primarni kontakt i šaljem hitni event u cloud.</string>
    <string name="sos_status_manual_active">SOS je aktivan</string>
    <string name="sos_status_calling_numbers">Zovem spremljene brojeve (%1$d) i puštam alarm na maksimalnoj glasnoći.</string>
    <string name="sos_status_calling_numbers_with_current">Zovem spremljene brojeve (%1$d). Trenutni broj: %2$s. Alarm svira na maksimalnoj glasnoći.</string>
    <string name="sos_status_alarm_only">SOS alarm svira na maksimalnoj glasnoći. Dodaj +385 brojeve za automatsko zvanje.</string>
    <string name="sos_status_call_unavailable">SOS alarm svira, ali na ovom uređaju nije moguće pokrenuti telefonski poziv.</string>
    <string name="sos_status_emulator_call_unavailable">SOS alarm svira, ali Wear OS emulator ne može uspostaviti stvarni telefonski poziv. Testiraj pozive na fizičkom satu ili preko uparenog telefona.</string>
    <string name="sos_status_countdown">Moguć pad detektiran</string>
    <string name="sos_status_countdown_detail">%1$d s do SOS alarma, poziva i cloud dojave. Otkaži alarm iz notifikacije ako je lažna uzbuna.</string>
    <string name="sos_status_alarm_sent">Alarm poslan</string>
    <string name="sos_status_alarm_sent_detail">SOS alarm je aktivan, poziv je pokrenut ako postoji spremljeni broj, a hitni event je poslan obitelji i Firebaseu.</string>
    <string name="sos_status_cancelled">Alarm otkazan</string>
    <string name="sos_status_cancelled_detail">Kretanje se vratilo ili je korisnik ručno otkazao uzbunu.</string>
    <string name="sos_status_stopped">SOS zaustavljen</string>
    <string name="sos_status_stopped_detail">Alarm je ugašen, a daljnje automatsko zvanje je zaustavljeno.</string>
    <string name="sos_status_impact_detected">Detektiran je udar</string>
    <string name="sos_status_impact_detail">Provjeravam kratko mirovanje prije SOS odbrojavanja.</string>
    <string name="sos_status_sensor_unavailable">Akcelerometar nije dostupan</string>
    <string name="sos_status_sensor_unavailable_detail">Ovaj sat ne prijavljuje akcelerometar.</string>
    <string name="sos_status_firebase_missing">Firebase nije konfiguriran</string>
    <string name="sos_status_firebase_missing_detail">Dodaj google-services.json i prijavi korisnika da bi obitelj dobivala podatke u stvarnom vremenu.</string>
    <string name="saved_phone_numbers_label">SOS brojevi za zvanje</string>
    <string name="saved_phone_numbers_empty">Nema spremljenih +385 brojeva.</string>
    <string name="saved_phone_numbers_hint">Dodirni broj koji želiš obrisati iz SOS liste.</string>
    <string name="saved_phone_numbers_locked_hint">Brisanje brojeva je zaključano dok je SOS aktivan.</string>
    <string name="phone_input_hint">Primjer: +38591111222</string>
    <string name="add_phone_button_label">Dodaj broj</string>
    <string name="phone_validation_error">Upiši važeći hrvatski broj u formatu +385XXXXXXXX ili +385XXXXXXXXX.</string>
    <string name="phone_duplicate">Taj broj je već spremljen.</string>
    <string name="phone_saved_title">SOS brojevi spremljeni</string>
    <string name="phone_saved_detail">Broj je spremljen lokalno i pripremljen za Firebase bazu.</string>
    <string name="phone_saved_toast">Broj je dodan u SOS listu.</string>
    <string name="remove_phone_dialog_title">Obrisati broj?</string>
    <string name="remove_phone_dialog_message">Želiš li obrisati broj %1$s iz SOS liste?</string>
    <string name="remove_phone_confirm">Obriši</string>
    <string name="phone_removed_title">Broj je obrisan</string>
    <string name="phone_removed_detail">SOS lista je ažurirana i spremljena.</string>
    <string name="phone_removed_toast">Broj je uklonjen iz SOS liste.</string>
    <string name="stop_sos_button_label">Zaustavi SOS</string>
    <string name="firebase_sync_unavailable_toast">Firebase nije spojen, pa se SOS kontakti čuvaju samo lokalno.</string>
    <string name="footer_hint">Dodaj +385 brojeve, pa SOS može zvati kontakte i svirati alarm dok ga ručno ne zaustaviš.</string>
    <string name="monitor_notification_title">GuardianCircle prati padove</string>
    <string name="monitor_notification_text">Senzori rade u pozadini, SOS poziv i Firebase sync su spremni.</string>
    <string name="emergency_notification_title">GuardianCircle hitni alarm</string>
    <string name="emergency_notification_text">Moguć pad je potvrđen. SOS alarm, poziv i cloud dojava kreću nakon odbrojavanja.</string>
    <string name="emergency_notification_sent_text">SOS je aktivan, a hitni event je poslan obitelji i u Firestore zapis.</string>
    <string name="cancel_alert">Otkaži alarm</string>
    <string name="emergency_call_missing_phone">Primarni kontakt još nije konfiguriran.</string>
    <string name="emergency_call_failed">Poziv nije uspio pokrenuti.</string>
    <string name="permission_rationale">Dopusti pozive, lokaciju, notifikacije i senzore za puni SOS rad.</string>
</resources>
